src/styles/components/header/_header.scss
@use "@styles/settings/variables" as  *;

.header {
    padding-block: calc(var(--header-height) / 2);

    &__menu {
        position: fixed;
        z-index: 1;
        bottom: 0;

        width: 100%;

        background-color: $dark-gunmetal;

        @media screen and (min-width: 1024px) {
            top: 0;
            right: 0;
            bottom: unset;

            width: 100%;
            padding: 10px;
        }
    }

    &__list {
        display: flex;

        width: 100%;
        margin: 0;
        padding: 0;

        list-style: none;

        border-top: 1px solid $ghost-white;

        @media screen and (min-width: 1024px) {
            justify-content: flex-end;
            padding-right: calc((100vw - 1440px) / 2);
            border: none;
        }
    }
}

